--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,37 @@
-api_key.txt
-foundationDownload
-usda_pretty.json
-foundation_foods.db
-calorie_killer.py
-usdaQuery/__pycache__/
-OpenFoodApi/__pycache__/
-tests/__pycache__/
-.pytest_cache
-*.json
-output.txt
-legacy/__pycache__/
+.env
+*.env
+.venv/
+env/
+venv/
+
+# Python 
 __pycache__/
+*.py[cod]  # .pyc, .pyo, .pyd fájlok
+*.json     # Bár van egy külön sorod rá, ide is illik a Pythonhoz kapcsolódóan
+output.txt # Ha ez tipikusan Python szkriptek kimenete
+
+# db
+*.db
+foundation_foods.db
+usda_pretty.json
+foundationDownload/ # Ha ez egy letöltött adatokat tartalmazó mappa
+
+# Test
+.pytest_cache/
+tests/__pycache__/
+
+# React frontend
+frontend/node_modules/
+frontend/build/
+
+legacy/__pycache__/
+
+*.log
+*.tmp
+*.swp
+*.DS_Store      # macOS rendszerfájl
+Thumbs.db       # Windows rendszerfájl
+
+# Special files
+api_key.txt
+calorie_killer.py # Ha nem akarod véletlenül sem ignorálni, vedd ki innen
